--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -1,6 +1,11 @@
-    .search-container {
-        display: flex; 
+  .search-container {
+        width: 400px;
         padding: 4px 15px;
+          @media (min-width: 600px) {
+    .search-container {
+       top:0;
+           }
+    }
      .search-container-button{
             font-size: 27px;
             background-color: transparent;
@@ -9,17 +14,15 @@
             color: rgb(220, 221, 222);
         }
         .search-container-input {
-            width: 100%;
             padding: 15px 10px;
             background-color: transparent;
             border: none;
             font-size: 20px;
-           /*  @media (max-width: 600px) {
+            @media (min-width: 600px) {
     .search-container-input {
-        display: inline-flex;
-         width: 40%;
+        display:flex;
+        width: 100%;
     }
-} */
+            }
         }
     }
-
