--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -8,14 +8,12 @@
     bottom: 0;
     margin: 0 auto;
     .header-menu-button{
-        font-size: 27px;
+        font-size: 24px;
         background-color: transparent;
         border: none;
         outline: none;
         color: rgb(220, 221, 222);
-    }
-    .header-menu{
-        list-style: none;
+        font-weight: lighter;
     }
 }
 
@@ -30,5 +28,10 @@
         background: transparent;
         width: 300px;
         list-style: none;
+        padding: 15px;
     }
+}
+
+ul{
+    list-style: none;
 }
