--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,31 +1,35 @@
-.card{
+.card {
     padding: 0px 4px;
     width: 300px;
     margin-bottom: 20px;
     box-sizing: border-box;
-    display: flex;
-        
 
     .card--header {
         overflow: hidden;
-        .card--img{
+        .card--img {
+            position: relative;
             width: 100%;
-            transition: width 1s;
-            
-        }
-        
-        &:hover{
-            transform: scaleX(1);
-            
-            
-        }
-        .card--header-title{
-            padding: 20px 0px;
-            font-size: 20px;
+            transition: all 0.3s ease 0s, height 0s ease 0s;
+            transform: scale(1);
+
+            &:hover {
+                transform: scale(1.05);
+            }
         }
     }
 
-    .card--container {
-
+    .card--content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .card--content-title {
+            padding: 20px 0px;
+            font-size: 20px;
+        }
+        .card--content-rating {
+            color: goldenrod;
+            margin-right: 15px;
+            font-size: 15px;
+        }
     }
 }
