--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,14 @@ body {
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: rgb(35, 39, 42);
     color: rgb(220, 221, 222);
-    font-weight: 300;
+    font-weight: 300;   
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-weight: 400;
+}
+
+h1{
+    font-size: 32px;
+    
 }
