--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -1,7 +1,11 @@
-.card-list{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.card--list{
     margin: 30px 0px;
+    .card--list-container{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+
+    }
+   
 
 }
