arreglo menu, falta resolver active en el btn

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -14,6 +14,12 @@
         outline: none;
         color: rgb(220, 221, 222);
         font-weight: lighter;
+        &:hover{
+            color:#2296F3;
+        }
+        &:active{
+            color:#2296F3;
+        }
     }
 }
 
@@ -35,3 +41,4 @@
 ul{
     list-style: none;
 }
+
