--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -1,6 +1,7 @@
   .search-container {
         width: 400px;
         padding: 4px 15px;
+        margin-top: 5px;
           @media (min-width: 600px) {
     .search-container {
        top:0;
@@ -12,16 +13,19 @@
             border: none;
             outline: none;
             color: rgb(220, 221, 222);
+            padding-right: 10px;
         }
         .search-container-input {
-            padding: 15px 10px;
+            padding: 8px 10px;
             background-color: transparent;
             border: none;
             font-size: 20px;
+            color: #DCDDDE;
             @media (min-width: 600px) {
     .search-container-input {
         display:flex;
         width: 100%;
+        
     }
             }
         }
