--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -17,7 +17,7 @@
         &:hover{
             color:#2296F3;
         }
-        &:active{
+        &:focus{
             color:#2296F3;
         }
     }
