--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -1,6 +1,6 @@
 .card--list{
-    margin: 30px 0px;
-    .card--list-container{
+/*     margin: 30px 0px;
+ */    .card--list-container{
         display: flex;
         justify-content: space-between;
         margin-top: 20px;
