--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,8 @@
 .navBar-container {
+
+    width: 100%;
+    padding: 0px auto;
+    margin: 0px;
     height: 3.2rem;
     display: flex;
     justify-content:flex-start;
