--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -1,4 +1,35 @@
-  .search-container {
+    .search-container {
+        width: 400px;
+        padding: 4px 15px;
+          @media (min-width: 600px) {
+    .search-container {
+       top:0;
+           }
+    }
+     .search-container-button{
+            font-size: 27px;
+            background-color: transparent;
+            border: none;
+            outline: none;
+            color: rgb(220, 221, 222);
+        }
+        .search-container-input {
+            padding: 15px 10px;
+            background-color: transparent;
+            border: none;
+            font-size: 20px;
+            @media (min-width: 600px) {
+    .search-container-input {
+        display:flex;
+        width: 100%;
+    }
+            }
+        }
+    }
+  
+  
+  
+  /* .search-container {
         width: 400px;
         padding: 4px 15px;
         margin-top: 5px;
@@ -29,4 +60,4 @@
     }
             }
         }
-    }
+    } */
